--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pugls Anticheat Testing Site</title>
+    <title>Unity Script Check</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,15 +48,15 @@
 
     <script>
         document.getElementById('checkButton').addEventListener('click', function() {
-            fetch('Functions/checkScript')
+            fetch('/.netlify/functions/checkScript')
                 .then(response => response.json())
                 .then(data => {
                     const resultDiv = document.getElementById('result');
                     if (data.exists) {
-                        resultDiv.textContent = 'AntiModders.cs file exists (No modders have deleted the anticheat)';
+                        resultDiv.textContent = 'AntiModders.cs file exists.';
                         resultDiv.style.color = 'green';
                     } else {
-                        resultDiv.textContent = 'AntiModders.cs file does not exist (Thus meaning a modders deleted it)';
+                        resultDiv.textContent = 'AntiModders.cs file does not exist.';
                         resultDiv.style.color = 'red';
                     }
                 })
